[gd_scene load_steps=25 format=3 uid="uid://bk5ieei7j7ott"]

[ext_resource type="Script" uid="uid://s68x2baa3yg8" path="res://Scenes/Shop/booster_set/booster_set.gd" id="1_rog81"]
[ext_resource type="Texture2D" uid="uid://ds0ctf1206pjg" path="res://Assets/shop/booster_set/mini_bg.png" id="2_jguy7"]
[ext_resource type="Texture2D" uid="uid://chyx6dya2pcha" path="res://Assets/shop/booster_set/start_bg.png" id="3_6jc43"]
[ext_resource type="Texture2D" uid="uid://m8f68ljjgqp3" path="res://Assets/shop/booster_set/best_bg.png" id="4_xx78k"]
[ext_resource type="Texture2D" uid="uid://dwslpcgx31ms7" path="res://Assets/shop/booster_set/big_bg.png" id="5_cq72d"]
[ext_resource type="Texture2D" uid="uid://w7a52vcymwdt" path="res://Assets/shop/booster_set/mini_fg.png" id="6_o4sqq"]
[ext_resource type="Texture2D" uid="uid://cudxf7k2q8dm6" path="res://Assets/shop/booster_set/start_fg.png" id="7_4wxgl"]
[ext_resource type="Texture2D" uid="uid://bldiwnrhba7ov" path="res://Assets/shop/booster_set/best_fg.png" id="8_x3xe7"]
[ext_resource type="Texture2D" uid="uid://ljaj2b4000g0" path="res://Assets/shop/booster_set/big_fg.png" id="9_4wxgl"]
[ext_resource type="PackedScene" uid="uid://bmdijdvqunf1c" path="res://Scenes/Shop/discount_flag/discount_flag.tscn" id="10_6jc43"]
[ext_resource type="Texture2D" uid="uid://mfbhe6j44i18" path="res://Assets/shop/coin_pack/coin_500.png" id="10_me6im"]
[ext_resource type="Texture2D" uid="uid://lktgbs8bu7vu" path="res://Assets/shop/PJ_shop_design2.png" id="10_o4sqq"]
[ext_resource type="FontFile" uid="uid://cjofpiuwfbr7i" path="res://Assets/fonts/Lilita One Regular.ttf" id="10_xx78k"]
[ext_resource type="Texture2D" uid="uid://dnxcqjwrhlcvm" path="res://Assets/shop/coin_pack/coin_2k.png" id="11_reoma"]
[ext_resource type="Texture2D" uid="uid://dodltk0t1mh33" path="res://Assets/shop/booster_set/boosters.png" id="12_cq72d"]
[ext_resource type="Texture2D" uid="uid://bk6xhfinpcsri" path="res://Assets/shop/coin_pack/coin_5k.png" id="12_gsboe"]
[ext_resource type="Texture2D" uid="uid://0e7xqmh7fck" path="res://Assets/shop/coin_pack/coin_10k.png" id="13_6ornw"]
[ext_resource type="Texture2D" uid="uid://ulwh7dskm2lj" path="res://Assets/shop/booster_set/glob_big_boosters.png" id="14_4wxgl"]
[ext_resource type="Texture2D" uid="uid://lwo46rmlar80" path="res://Assets/shop/booster_set/price_bg.png" id="15_x3xe7"]
[ext_resource type="Texture2D" uid="uid://brcdjtsu6w6cc" path="res://Assets/shop/booster_set/glow_big_coins.png" id="19_reoma"]

[sub_resource type="LabelSettings" id="LabelSettings_cq72d"]
line_spacing = 0.0
font = ExtResource("10_xx78k")
font_size = 33

[sub_resource type="LabelSettings" id="LabelSettings_o4sqq"]
font = ExtResource("10_xx78k")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_me6im"]
font = ExtResource("10_xx78k")
font_size = 26
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4k2dv"]
font = ExtResource("10_xx78k")
font_size = 40

[node name="BoosterSet" type="Button"]
custom_minimum_size = Vector2(646, 203)
anchors_preset = -1
anchor_right = 0.907
anchor_bottom = 0.141
offset_right = -1.04004
offset_bottom = 22.52
focus_mode = 0
flat = true
script = ExtResource("1_rog81")
currency_char = "Z"
mini_bg = ExtResource("2_jguy7")
start_bg = ExtResource("3_6jc43")
best_bg = ExtResource("4_xx78k")
big_bg = ExtResource("5_cq72d")
mini_fg = ExtResource("6_o4sqq")
start_fg = ExtResource("7_4wxgl")
best_fg = ExtResource("8_x3xe7")
big_fg = ExtResource("9_4wxgl")
coins500 = ExtResource("10_me6im")
coins2000 = ExtResource("11_reoma")
coins5000 = ExtResource("12_gsboe")
coins10000 = ExtResource("13_6ornw")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = -1014.0
offset_top = -973.0
offset_right = 1661.0
offset_bottom = 381.0
texture = ExtResource("10_o4sqq")

[node name="Background" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_top = 23.0
offset_right = 653.0
offset_bottom = 203.0
texture = ExtResource("2_jguy7")

[node name="Head" type="Control" parent="Background"]
layout_mode = 1
anchors_preset = 0
offset_left = 38.0
offset_top = -11.0
offset_right = 254.0
offset_bottom = 45.0

[node name="HeadBackground" type="TextureRect" parent="Background/Head"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("6_o4sqq")

[node name="HeadBackgroundBig" type="TextureRect" parent="Background/Head"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = -4.0
offset_top = -7.0
offset_right = 219.0
offset_bottom = 61.0
texture = ExtResource("9_4wxgl")

[node name="HeadLabel" type="Label" parent="Background/Head"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -24.0
offset_right = 92.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
text = "Мини"
label_settings = SubResource("LabelSettings_cq72d")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="DiscountFlag" parent="Background" instance=ExtResource("10_6jc43")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -100.0
offset_top = -21.0
offset_right = 11.0
offset_bottom = 51.0
grow_horizontal = 0
text = "10%"

[node name="Boosters" type="Control" parent="Background"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 54.0
offset_top = -41.0
offset_right = 342.0
offset_bottom = 51.0
grow_vertical = 2

[node name="BoosterCommon" type="TextureRect" parent="Background/Boosters"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("12_cq72d")

[node name="BoosterBig" type="TextureRect" parent="Background/Boosters"]
visible = false
layout_mode = 0
offset_left = -9.0
offset_top = -8.0
offset_right = 288.0
offset_bottom = 100.0
texture = ExtResource("14_4wxgl")

[node name="Label" type="Label" parent="Background/Boosters"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 82.0
offset_top = -23.0
offset_right = 122.0
offset_bottom = 6.0
grow_vertical = 0
text = "0"
label_settings = SubResource("LabelSettings_o4sqq")
vertical_alignment = 1

[node name="Label2" type="Label" parent="Background/Boosters"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 169.0
offset_top = -23.0
offset_right = 209.0
offset_bottom = 6.0
grow_vertical = 0
text = "0"
label_settings = SubResource("LabelSettings_o4sqq")
vertical_alignment = 1

[node name="Label3" type="Label" parent="Background/Boosters"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 285.0
offset_top = -23.0
offset_right = 325.0
offset_bottom = 6.0
grow_vertical = 0
text = "0"
label_settings = SubResource("LabelSettings_o4sqq")
vertical_alignment = 1

[node name="Coins" type="Control" parent="Background"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -271.0
offset_top = -45.0
offset_right = -149.0
offset_bottom = 54.0
grow_horizontal = 0
grow_vertical = 2

[node name="BigCoinsImage" type="TextureRect" parent="Background/Coins"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -90.0
offset_top = -13.0
offset_right = 58.0
offset_bottom = 106.0
grow_horizontal = 2
texture = ExtResource("19_reoma")

[node name="CoinsImage" type="TextureRect" parent="Background/Coins"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Background/Coins"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -58.0
offset_top = -30.0
offset_right = -11.0
grow_horizontal = 0
grow_vertical = 0
text = "500"
label_settings = SubResource("LabelSettings_me6im")
horizontal_alignment = 2

[node name="PriceBackground" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -143.0
offset_top = -26.0
offset_right = -20.0
offset_bottom = 46.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("15_x3xe7")

[node name="PriceLabel" type="Label" parent="Background/PriceBackground"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -24.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "0Z"
label_settings = SubResource("LabelSettings_4k2dv")
horizontal_alignment = 1
